# serde_url

./: .gitignore  Cargo.toml  Makefile  README.md
docs/: aliases.js  index.html  search-index.js  settings.html  source-files.js
docs/idna/uts46/: struct.Errors.html  struct.Flags.html
docs/percent_encoding/: struct.DEFAULT_ENCODE_SET.html  struct.PATH_SEGMENT_ENCODE_SET.html  struct.PercentDecode.html  struct.PercentEncode.html  struct.QUERY_ENCODE_SET.html  struct.SIMPLE_ENCODE_SET.html  struct.USERINFO_ENCODE_SET.html
docs/serde/: trait.Serialize.html
docs/serde/ser/: trait.Serialize.html
docs/serde_url/: all.html  enum.Host.html  enum.UrlFault.html  index.html  sidebar-items.js  struct.Origin.html  struct.QueryData.html  struct.Url.html
docs/serde_url/errors/: UrlFault.t.html  enum.UrlFault.html
docs/smallvec/: macro.smallvec.html  struct.Drain.html  struct.IntoIter.html  struct.SmallVec.html  trait.ExtendFromSlice.html  trait.VecLike.html
docs/unicode_bidi/: enum.BidiClass.html  struct.BidiInfo.html  struct.InitialInfo.html  struct.ParagraphInfo.html
docs/unicode_normalization/: enum.IsNormalized.html  struct.Decompositions.html  struct.Recompositions.html  struct.StreamSafe.html
docs/url/: enum.Host.html  enum.Origin.html  enum.ParseError.html  enum.Position.html  enum.SyntaxViolation.html  struct.HostAndPort.html  struct.OpaqueOrigin.html  struct.ParseOptions.html  struct.PathSegmentsMut.html  struct.SocketAddrs.html  struct.Url.html  struct.UrlQuery.html
src/: errors.rs  internal.rs  lib.rs  querydata.rs
tests/: tests.rs
(+93 files in other folders)
